# Inscryption

./: CMakeLists.txt  README.md  main.cpp  singleton_crtp_params.diff
.github/actions/runtime-checks/: action.yml
.github/workflows/: cmake.yml
cmake/: CompilerFlags.cmake
headers/: GameManager.h  board.h  card_factory.h  cards.h  cards_factory.h  constante.h  create_card.h  deck.h  derivate.h  effects.h  end_screen.h  exceptii.h  font_manager.h  game.h  onAttackCard.h  onPlaceCard.h  pile.h  player.h  scales.h  singleton.h  slot.h
include/headers/: board.h  cards.h  cards_factory.h  deck.h  effects.h  font_manager.h  game.h  pile.h  player.h  slot.h
include/sources/: board.cpp  cards.cpp  cards_factory.cpp  deck.cpp  font_manager.cpp  game.cpp  pile.cpp  player.cpp  slot.cpp
scripts/: run_cppcheck.sh  run_valgrind.sh
sources/: GameManager.cpp  board.cpp  cards.cpp  deck.cpp  derivate.cpp  end_screen.cpp  exceptii.cpp  font_manager.cpp  game.cpp  onAttackCard.cpp  onPlaceCard.cpp  pile.cpp  player.cpp  scales.cpp  slot.cpp
